--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -76,6 +76,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 0.3s ease;
+  }
+  
+  .section-{{ section.id }} .faq__toggle-icon:hover {
+    opacity: 0.8;
   }
   
   .section-{{ section.id }} .icon-plus, .section-{{ section.id }} .icon-minus {
