--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -39,12 +39,16 @@
   .faq__grid {
     display: flex;
     flex-wrap: wrap;
+    border-top: 1px solid {{ section.settings.border_color }};
+    border-left: 1px solid {{ section.settings.border_color }};
   }
   
   .section-{{ section.id }} .faq__grid-item {
     width: 100%;
     padding: 0;
+    border-right: 1px solid {{ section.settings.border_color }};
     border-bottom: 1px solid {{ section.settings.border_color }};
+    box-sizing: border-box;
   }
   
   .faq__item {
