--- a/sections/image-with-content.liquid
+++ b/sections/image-with-content.liquid
@@ -1029,6 +1029,18 @@ Figma design:
     }
   }
 
+  @media screen and (max-width: 749px) {
+    .image-with-content__content {
+      gap: 0rem;
+      max-width: 100%;
+      margin: 3rem auto;
+    }
+
+    .image-with-content__buttons {
+      margin-top: 1rem;
+    }
+  }
+
   .section-{{ section.id }} .image-with-content__subheading {
     font-size: var(--font-size-base);
     margin: 0;
