--- a/sections/service-blocks.liquid
+++ b/sections/service-blocks.liquid
@@ -59,7 +59,7 @@
 
 .service-block__image {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   position: relative;
   top: 0;
