--- a/sections/faq.liquid
+++ b/sections/faq.liquid
@@ -116,6 +116,17 @@
       width: 50%;
     }
   }
+
+  @media screen and (max-width: 749px) {
+    .faq__question-wrapper {
+      padding: 24px;
+    }
+    .section-{{ section.id }} .faq__answer {
+      padding: 24px;
+      max-width: 100%;
+    }
+    
+  }
 </style>
 
 <div class="faq section-{{ section.id }} section-{{ section.id }}-padding" id="Faq-{{ section.id }}" {{ section.shopify_attributes }}>
